Fixed the plugin name.
git-svn-id: http://chianti.ucsd.edu/svn@20319 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/coreplugins/trunk/EquationFunctions/build.xml
+++ b/coreplugins/trunk/EquationFunctions/build.xml
@@ -104,7 +104,7 @@
          dir="${EquationFunctions.root.dir}/lib"
          includes="resources/**"/>
       <manifest>
-	<attribute name="Cytoscape-Plugin" value="EquationFunctions.AttributeEquationFunctionsPlugin"/>
+	<attribute name="Cytoscape-Plugin" value="EquationFunctions.EquationFunctionsPlugin"/>
       </manifest>
     </jar>
     <copy todir="${EquationFunctions.lib.dir}" file="EquationFunctions.jar"/>
