Fixed several warnings.
git-svn-id: http://chianti.ucsd.edu/svn@20411 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/corelibs/trunk/equations/build.xml
+++ b/corelibs/trunk/equations/build.xml
@@ -104,6 +104,8 @@
            classpathref="project.class.path"
            destdir="${build.dir}"
            debug="${debug}"
+	   source="1.5"
+	   target="1.5"
            deprecation="${deprecation}" 
            optimize="${optimize}"
            fork="${fork}">
