fixing deprecation warnings
git-svn-id: http://chianti.ucsd.edu/svn@20429 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscape/trunk/build.xml
+++ b/cytoscape/trunk/build.xml
@@ -265,13 +265,13 @@
 		description="Compiles all source code.">
 		<javac 
 		       destdir="${build.classes}" 
-		       nowarn="on" 
+		       nowarn="off" 
 		       debug="true" 
 		       source="${java.target_version}" 
 		       target="${java.target_version}"
 		       optimize="on" 
 		       includeAntRuntime="false" 
-		       deprecation="no">
+		       deprecation="yes">
 			<classpath refid="classpath" />
 			<include name="cytoscape/**" />
 			<src path="${src.dir}" />
