git-svn-id: http://chianti.ucsd.edu/svn@20489 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/csplugins/trunk/soc/ghuck/LabelPositioningPlugin/plugin/build.xml
+++ b/csplugins/trunk/soc/ghuck/LabelPositioningPlugin/plugin/build.xml
@@ -67,6 +67,10 @@
     <path id="junit.class.path" >
       <pathelement path="${project.class.path}/"/>
       <pathelement location="${test.jar}"/>
+
+      <pathelement location="${cytoscape.dir}/cytoscape.jar"/>
+      <pathelement path="${java.class.path}/"/>
+
       <fileset dir="${lib.dir}">
         <include name="**/*.jar"/>
       </fileset>
