almost finished this implementation for using LayoutLabelPartition.
git-svn-id: http://chianti.ucsd.edu/svn@20541 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/coreplugins/branches/labelLayout/AutomaticLayout/build.xml
+++ b/coreplugins/branches/labelLayout/AutomaticLayout/build.xml
@@ -24,7 +24,7 @@
     <property name="cytoscape.dir" value="/Users/gerardohuck/Cytoscape"/>
     <property name="cytoscape.lib.dir" value="${cytoscape.dir}/lib"/>
     <property name="cytoscape.plugin.dir" value="${cytoscape.dir}/plugins/"/>
-    <property name="csplugins.dir" value="../"/>
+    <property name="csplugins.dir" value="./src/csplugins"/>
 
     <!-- Define the directories -->
     <property name="layout.root.dir" value="./"/>
